--- a/src/components/task/task.css
+++ b/src/components/task/task.css
@@ -1,30 +1,30 @@
-.todo-list li {
+.task {
   position: relative;
   font-size: 24px;
   border-bottom: 1px solid #ededed;
 }
 
-.todo-list li:last-child {
+.task:last-child {
   border-bottom: none;
 }
 
-.todo-list li.editing {
+.task.editing {
   border-bottom: none;
   padding: 0;
 }
 
-.todo-list li.editing .edit {
+.task.editing .edit {
   display: block;
   width: calc(100% - 43px);
   padding: 12px 16px;
   margin: 0 0 0 43px;
 }
 
-.todo-list li.editing .view {
+.task.editing .view {
   display: none;
 }
 
-.todo-list li .toggle {
+.task .toggle {
   text-align: center;
   width: 40px;
   /* auto, since non-WebKit browsers doesn't support input styling */
@@ -39,37 +39,37 @@
   cursor: pointer;
 }
 
-.todo-list li .toggle {
+.task .toggle {
   opacity: 0;
 }
 
-.todo-list li .toggle + label {
+.task .toggle + label {
   /*
-          Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
-          IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
-      */
+		Firefox requires `#` to be escaped - https://bugzilla.mozilla.org/show_bug.cgi?id=922433
+		IE and Edge requires *everything* to be escaped to render, so we do that instead of just the `#` - https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/7157459/
+	*/
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
   background-repeat: no-repeat;
   background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+.task .toggle:checked + label {
   background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
-.todo-list li label {
+.task label {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px 85px 15px 60px;
 }
 
-.todo-list li label .created {
+.task label .created {
   font-size: 13px;
   color: gray;
 }
 
-.todo-list li label .description {
+.task label .description {
   word-break: break-all;
   display: block;
   line-height: 1.2;
@@ -78,12 +78,12 @@
   color: #4d4d4d;
 }
 
-.todo-list li.completed label .description {
+.task.completed label .description {
   color: #cdcdcd;
   text-decoration: line-through;
 }
 
-.todo-list li .icon {
+.task .icon {
   position: absolute;
   top: 0;
   bottom: -3px;
@@ -96,38 +96,31 @@
   cursor: pointer;
 }
 
-.todo-list li .icon:hover {
+.task .icon:hover {
   color: #af5b5e;
 }
 
-.todo-list li .icon-destroy {
+.task .icon-destroy {
   right: 10px;
 }
 
-.todo-list li .icon-destroy:after {
+.task .icon-destroy:after {
   content: '×';
 }
 
-.todo-list li .icon-edit {
+.task .icon-edit {
   font-size: 19px;
   right: 45px;
 }
 
-.todo-list li .icon-edit:after {
+.task .icon-edit:after {
   content: '✎';
 }
 
-.todo-list li .edit {
+.task .edit {
   display: none;
 }
 
-.todo-list li.editing:last-child {
+.task.editing:last-child {
   margin-bottom: -1px;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  .todo-list li .toggle {
-    background: none;
-    height: 40px;
-  }
 }
