Lint and format

--- a/src/components/task-list/task-list.css
+++ b/src/components/task-list/task-list.css
@@ -72,8 +72,7 @@
 
 .todo-list li label .created {
   font-size: 13px;
-  /* color: gray; */
-  color: gold;
+  color: gray;
 }
 
 .todo-list li label .description {
